Thu May 23 12:00:14 CEST 2002 Pekka Riikonen <priikone@silcnet.org>

	* When resuming client, remove the old client entry from
	  the watcher list too.  Affected file silcd/packet_receive.c.

Sun May 19 18:59:00 EEST 2002 Pekka Riikonen <priikone@silcnet.org>

	* Fixed the CHANNEL_CHANGE notify handling in client libary
	  to not use freed memory.  Affected file is
	  lib/silcclient/client_notify.c.

	* Fixed CUMODE_CHANGE notify handling in server.  Affected
	  file silcd/packet_receive.c.

	* Fixed USERS command to support empty channels.  Affected
	  file silcd/command.c.

Sat May 18 11:35:19 EEST 2002 Pekka Riikonen <priikone@silcnet.org>

	* Allow multiple identical pending commands to be registered
	  in client library.  Affected file is lib/silcclient/command.c.

	* Call the completion for resolving client information only
	  after all resolvers has finished.  This fixes a crash in
	  the client.  Added support for checking when the resolvers
	  are finished.  Affected file is lib/silcclient/idlist.c.

	* Wait by default 3 seconds before reconnecting to the server
	  after being disconnected.  Makes the /detach command a bit
	  more usable.

Fri May 17 17:23:45 EEST 2002 Pekka Riikonen <priikone@silcnet.org>

	* Check the watcher list before sending signoff notifys
	  when closing client connection.  Affected file is
	  silcd/server.c.

	* Added better CMODE command rights checking.  Affected file
	  silcd/server_util.c.

Fri May 17 08:33:41 CEST 2002 Pekka Riikonen <priikone@silcnet.org>

	* Fixed watcher list checking during server signoff.  It
	  crashed the server.  Affected file silcd/server_util.c.

	* The JOIN command reply returns now the founder's public
	  key.  Affected file is silcd/command.c.

	* Announce the channel mode, and the mode properties with
	  CMODE_CHANGE notify.  Affected file silcd/server.c.

	* Mark new channels by default disabled, untill at least
	  one user joins the channel.  Affected file is
 	  silcd/packet_receive.c.
