@@ -3,6 +3,10 @@ Thu May 23 12:00:14 CEST 2002 Pekka Riikonen <priikone@silcnet.org>
 	* When resuming client, remove the old client entry from
 	  the watcher list too.  Affected file silcd/packet_receive.c.
 
+	* Do not allow normal server to force founder mode away
+	  from router if the founder mode is already set.  Affected
+	  file silcd/packet_receive.c.
+
 Sun May 19 18:59:00 EEST 2002 Pekka Riikonen <priikone@silcnet.org>
 
 	* Fixed the CHANNEL_CHANGE notify handling in client libary
